tests/comp/sem/valid/recursion-1.mj
class A {

	public int foo(boolean a) {
		return 0;
	}

	public int test(int x) {
		int y = foo(true);
		return test(x);
	}

	public static void main(String[] args) {
	}

}
