tests/comp/sem/invalid/subscript-1.mj
class A {

	public void test(int foo) {
		foo /*** [0] ***/;
	}

	public static void main(String[] args) {
	}

}
